# notectl

./: README.md  pyproject.toml
notectl/: attachments.py  autoindex.py  config.py  daily_notes.py  editor.py  git.py  main.py  topic_notes.py
notectl/conf/: default.toml  matteing.toml
notectl/scripts/: take-git-snapshot.sh
